--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -77,6 +77,7 @@ li:hover{
     border-radius: 15px;
 }
 .f-icon>a:hover:nth-child(2){
+    border-radius: 15px;
     color: rgb(46, 26, 226);
     background-color: white;
 }
